<resources>
    <string name="app_name">Quiz</string>
    <string name="zoo_quiz_txt">Kotlin</string>
    <string name="test_knowledge_txt">Проверь свои знания</string>
    <string name="start_txt">Начать</string>
    <string name="next_btn_txt">Следующий</string>
    <string name="previous_btn_txt">Предыдущий</string>
    <string name="finish_btn_txt">Закончить</string>
    <string name="share_results_txt">Поделиться</string>
    <string name="restart_txt">Пройти ещё раз</string>
    <string name="exit_txt">Выйти</string>
    <string name="name_results">player results</string>
    <string name="myar">myAr</string>
</resources>