<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3C3C">

    <TextView
        android:id="@+id/resultsTxt"
        android:layout_width="395dp"
        android:layout_height="93dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="140dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/restartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="516dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/restart_txt"
        android:src="@android:drawable/ic_popup_sync"
        app:layout_constraintStart_toEndOf="@+id/shareBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="516dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/share_results_txt"
        android:src="@android:drawable/ic_menu_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="516dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/exit_txt"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintStart_toEndOf="@+id/restartBtn"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>