<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3C3C">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2C2C2C"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionTxt"
        android:layout_width="403dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        android:textColor="#FEFEFE"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="405dp"
        android:layout_height="465dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTxt">

        <RadioButton
            android:id="@+id/answerOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

        <RadioButton
            android:id="@+id/answerOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="29dp" />

        <RadioButton
            android:id="@+id/answerOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="29dp" />

        <RadioButton
            android:id="@+id/answerOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="29dp" />
    </RadioGroup>

    <Button
        android:id="@+id/previousBtn"
        android:layout_width="173dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#2C2C2C"
        android:text="@string/previous_btn_txt"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="173dp"
        android:layout_height="71dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#2C2C2C"
        android:text="@string/next_btn_txt"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/finishBtn"
        android:layout_width="173dp"
        android:layout_height="71dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#2C2C2C"
        android:text="@string/finish_btn_txt"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>